--- a/assets/less/pages/home.less
+++ b/assets/less/pages/home.less
@@ -27,9 +27,10 @@
 // ===== SECTION: About the project =====
 .section-about {
     text-align: center;
-    padding: 75px 0;
+    padding: 75px 20px;
     max-width: 1255px;
     margin: 0 auto;
+    box-sizing: border-box;
 
     .breakpoint-large-down({
         padding: 50px 20px;
