--- a/assets/less/themes/master.less
+++ b/assets/less/themes/master.less
@@ -10,6 +10,8 @@ html,body {
     font-size: 16px;
     font-style: normal;
     line-height: 1.7em;
+    overflow-x: hidden;
+    max-width: 100vw;
 }
 
 a {
